release/1.11.2/VERSION.md
# 1.11.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.11.2```   |
| Release Time   | ```2016-12-21T09:29:12+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.11```   |
| sha1   | ```c64959fe73672e9b053b157f57b6aba318d0b3b5```   |
| size   | ```131073```   |
| total size  | ```125357479```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/c64959fe73672e9b053b157f57b6aba318d0b3b5/1.11.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```db5aa600f0b0bf508aaf579509b345c4e34087be```   |
| size   | ```9198097```   |
| url       | ```https://piston-data.mojang.com/v1/objects/db5aa600f0b0bf508aaf579509b345c4e34087be/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```f00c294a1576e03fddcac777c3cf4c7d404c4ba4```   |
| size   | ```9720835```   |
| url       | ```https://piston-data.mojang.com/v1/objects/f00c294a1576e03fddcac777c3cf4c7d404c4ba4/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |